# Calculator

./: Calculator.py  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: test_calculator.py
